textarea max width set, no longer stretches beyond screen on mobile

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -52,6 +52,7 @@
     border-radius: 50%;
     margin-right: 1rem;
     box-shadow: 0px 0px 8px;
+    pointer-events: none;
   }
 
   p {
