--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -13,6 +13,7 @@
     opacity: 0.2;
     margin-top: 13rem;
     box-shadow: -2rem 1rem 2rem grey;
+    pointer-events: none;
   }
 }
 
